doc/doxy/doxystyle.css
code {
  background: transparent;
}
.note dt {
  margin-right: 1em;
  display: inline;
}
.note dd {
  margin-left: 0em;
  display: inline;
}
.see dt {
  margin-right: 1em;
  display: inline;
}
.see dd {
  margin-left: 0em;
  display: inline;
}

.search     { color: #003399;
              font-weight: bold;
              background-color: none;
}
FORM.search {
              margin-bottom: 0px;
              margin-top: 0px;
              background-color: none;
}
INPUT.search { font-size: 75%;
               color: #000080;
               font-weight: normal;
               background-color: #e8eef2;
}

div.qindex {
  width: 100%;
  background-color: #e8eef2;
  border: 1px solid #84b0c7;
  text-align: center;
  margin: 2px;
  padding: 2px;
  line-height: 140%;
}
div.nav {
  width: 100%;
  background-color: #eee;
  border: 1px solid #aaa;
  margin-bottom: 2em;
  padding: 2px;
  line-height: 140%;
}
div.navtab {
  background-color: #e8eef2;
  border: 1px solid #84b0c7;
  text-align: center;
  margin: 2px;
  margin-right: 15px;
  padding: 2px;
}
td.navtab {
  font-size: 70%;
}
a.qindex {
  text-decoration: none;
  font-weight: bold;
  color: #002bb8;
}
a.qindex:visited {
  text-decoration: none;
  font-weight: bold;
  color: #002bb8;
}
a.qindex:hover {
  text-decoration: none;
  background-color: #ddddff;
}
a.qindexHL {
  text-decoration: none;
  font-weight: bold;
  background-color: #6666cc;
  color: #ffffff;
  border: 1px double #9295C2;
}
a.qindexHL:hover {
  text-decoration: none;
  background-color: #6666cc;
  color: #ffffff;
}
a.qindexHL:visited { text-decoration: none; background-color: #6666cc; color: #ffffff }
a.el { text-decoration: none; font-weight: bold }
a.elRef { font-weight: bold }
a.code:link { text-decoration: none; font-weight: normal; color: #0000FF}
a.code:visited { text-decoration: none; font-weight: normal; color: #0000FF}
a.codeRef:link { font-weight: normal; color: #0000FF}
a.codeRef:visited { font-weight: normal; color: #0000FF}
a.anchor:hover { text-decoration: none; }

dl.el { margin-left: -1cm }
.fragment {
       font-family: monospace, fixed;
       font-size: 95%;
}
pre.fragment {
  border: 1px solid #CCCCCC;
  background-color: #f5f5f5;
  margin-top: 4px;
  margin-bottom: 4px;
  margin-left: 2px;
  margin-right: 8px;
  padding-left: 6px;
  padding-right: 6px;
  padding-top: 4px;
  padding-bottom: 4px;
}
div.ah { background-color: black; font-weight: bold; color: #ffffff; margin-bottom: 3px; margin-top: 3px }

div.groupHeader {
       margin-left: 16px;
       margin-top: 12px;
       margin-bottom: 6px;
       font-weight: bold;
}
div.groupText { margin-left: 16px; font-style: italic; font-size: 90% }
td.indexkey {
  background-color: #f9f9f9;
  font-weight: bold;
  padding-right  : 10px;
  padding-top    : 2px;
  padding-left   : 10px;
  padding-bottom : 2px;
  margin-left    : 0px;
  margin-right   : 0px;
  margin-top     : 2px;
  margin-bottom  : 2px;
  border: 1px solid #e0e0e0;
}
td.indexvalue {
  background-color: #f9f9f9;
  font-style: italic;
  padding-right  : 10px;
  padding-top    : 2px;
  padding-left   : 10px;
  padding-bottom : 2px;
  margin-left    : 0px;
  margin-right   : 0px;
  margin-top     : 2px;
  margin-bottom  : 2px;
  border: 1px solid #e0e0e0;
}
tr.memlist {
   background-color: #f0f0f0; 
}
p.formulaDsp { text-align: center; }
img.formulaDsp { }
img.formulaInl { vertical-align: middle; }
span.keyword       { color: #008000 }
span.keywordtype   { color: #604020 }
span.keywordflow   { color: #e08000 }
span.comment       { color: #800000 }
span.preprocessor  { color: #806020 }
span.stringliteral { color: #002080 }
span.charliteral   { color: #008080 }
.mdescLeft {
       padding: 0px 8px 4px 8px;
  font-style: italic;
  background-color: #f9f9f9;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: solid;
  margin: 0px;
}
.mdescRight {
       padding: 0px 8px 4px 8px;
  font-style: italic;
  background-color: #f9f9f9;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: none;
  margin: 0px;
}
.memItemLeft {
  padding: 1px 0px 0px 8px;
  margin: 4px;
  border-width: 1px;
  background-color: #f9f9f9;
  border-color: #e0e0e0;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: solid;
}
.memItemRight {
  padding: 1px 8px 0px 8px;
  margin: 4px;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: none;
  background-color: #f9f9f9;
}
.memTemplItemLeft {
  padding: 1px 0px 0px 8px;
  margin: 4px;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: solid;
  background-color: #f9f9f9;
}
.memTemplItemRight {
  padding: 1px 8px 0px 8px;
  margin: 4px;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: none;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: none;
  background-color: #f9f9f9;
}
.memTemplParams {
  padding: 1px 0px 0px 8px;
  margin: 4px;
  border-width: 1px;
  border-color: #e0e0e0;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: none;
  border-left-style: solid;
  background-color: #f9f9f9;
  color: #606060;
}
td.tiny      { font-size: 75%;
}
.dirtab { padding: 4px;
          border-collapse: collapse;
          border: 1px solid #84b0c7;
}
th.dirtab { background: #e8eef2;
            font-weight: bold;
}
hr { height: 0px;
     border: none;
}

/* Style for detailed member documentation */
.memtemplate {
  font-size: 80%;
  color: #606060;
  font-weight: normal;
} 
.memnav { 
  background-color: #e8eef2;
  border: 1px solid #84b0c7;
  text-align: center;
  margin: 2px;
  margin-right: 15px;
  padding: 2px;
}
.memitem {
  padding: 4px;
  background-color: #f9f9f9;
  border: 1px solid #aaa;
}
.memname {
  white-space: nowrap;
  font-weight: bold;
}
.memdoc{
  padding-left: 10px;
}
.memproto {
  background-color: #d5e1e8;
  width: 100%;
  border-width: 1px;
  border-style: solid;
  border-color: #84b0c7;
  font-weight: bold;
}
.paramkey {
  text-align: right;
}
.paramtype {
  white-space: nowrap;
}
.paramname {
  color: #602020;
  font-style: italic;
  white-space: nowrap;
}
/* End Styling for detailed member documentation */

/* for the tree view */
.ftvtree {
  font-family: sans-serif;
  margin:0.5em;
}
.directory { font-size: 9pt; font-weight: bold; }
.directory h3 { margin: 0px; margin-top: 1em; font-size: 11pt; }
.directory > h3 { margin-top: 0; }
.directory p { margin: 0px; white-space: nowrap; }
.directory div { display: none; margin: 0px; }
.directory img { vertical-align: -30%; }

/* tabs styles */

div.tabs {
   padding: 0;
   white-space: nowrap;
   line-height: 5.1em;
   overflow: visible;
   border-collapse: collapse;
   text-align: left;
}

div.tabs ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

div.tabs li {
   display: inline;
   margin: 0 .3em 0 0;
}

div.tabs li span {
   padding: 0.2em;
   border: 1px solid #aaa;
   border-bottom: none;
   background-color: #eee;
   overflow: visible;
}

div.tabs li.current span {
  background-color: white;
  font-weight: bold;
  border-bottom: 1px solid white;
}

div.tabs table {
  border: 0;
  display:inline;
  font: x-small;
}

div.tabs form {
  border: 0;
  display: inline;
  position: absolute;
  top: 0;
  right: 2px;
  margin: 0;
  padding: 0;
}

div.tabs a {
   text-decoration  : none;
}

div.tabs a:link, div.tabs a:visited,
div.tabs a:active {
       color: #002bb8;
}

div.tabs a:hover {
  color: #ba0000;
}

div.tabs input {
   border: 1px solid #aaa;
}

div.tabs td {
   text-decoration  : none;
}

/* Commented Backslash Hack hides rule from IE5-Mac \*/
div.tabs span {float : none;}
/* End IE5-Mac hack */

